; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_hook.c_hook_remove_locked.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_hook.c_hook_remove_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@nhooks = common dso_local global i32 0, align 4
@ATOMIC_RELAXED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @hook_remove_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hook_remove_locked(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @seq_try_load_hooks(%struct.TYPE_4__* %3, i32* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @assert(i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @assert(i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i32 0, i32* %12, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @seq_store_hooks(i32* %13, %struct.TYPE_4__* %3)
  %15 = load i32, i32* @ATOMIC_RELAXED, align 4
  %16 = call i64 @atomic_load_u(i32* @nhooks, i32 %15)
  %17 = sub nsw i64 %16, 1
  %18 = load i32, i32* @ATOMIC_RELAXED, align 4
  %19 = call i32 @atomic_store_u(i32* @nhooks, i64 %17, i32 %18)
  ret void
}

declare dso_local i32 @seq_try_load_hooks(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @seq_store_hooks(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @atomic_store_u(i32*, i64, i32) #1

declare dso_local i64 @atomic_load_u(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
